# acmInternal-cli

./: .env  .gitignore  .goreleaser.yml  Cargo.toml  README.md  accessToken.txt  go.mod  go.sum  main.go  my.db  package-lock.json  package.json  refreshToken.txt
.github/workflows/: release_build.yml
cli-auth/: auth.go
cli-core/: auth.go
cmd/: cancel.go  fetch.go  join.go  leave.go  login.go  new.go  projects.go  root.go
src/: main.rs
