[package]
name = "acmInternal-cli"
version = "0.1.0"
authors = ["madrigal1 <kurupgokul11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
json = "0.12.4"
reqwest = {version = "0.10.9",features=["json"]}
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
structopt = "0.3.21"
tokio = {version="0.2.5",features=["full"]}
